:wrench: feat: settings on dashboard e auth services

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,6 +1,5 @@
 .ContainerMainNavBar {
-    width: 50%;
-    max-width: 25rem;
+    width: 100%;
     display: flex;
     flex-direction: row-reverse; 
     justify-self: center;
@@ -11,6 +10,7 @@
 .ContainerUlNavBar {
     display: flex;
     padding: 0.3rem 1rem;
+    gap: 0.5rem;
 }
 
 .ContainerUlNavBar  li {
