--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -1,11 +1,13 @@
+/* src\styles\dashboard.module.css */
 .ContainerMainDeclaration {
-    width: 40%;
-    max-width: 50rem;
+    width: 40rem;
     display: flex;
     flex-direction: column; 
     justify-self: center;
     padding: 0;
     margin: 0;
+    position: relative;
+    transition: filter 0.3s ease;
 }
 
 .HeaderDashboard {
@@ -13,10 +15,6 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
-}
-
-.HeaderDashboard > h1 {
-    font-size: 1.5rem;
 }
 
 .LogoImageReceitaFedral {
@@ -27,22 +25,37 @@
 .SectionMainDeclarationsUser {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
 }
-.DeclarationCards  {
+
+.DeclarationCards {
     width: fit-content;
     background: rgb(180, 180, 180);
     color: black;
     padding: 1rem;
     margin: 1rem;
     border-radius: 0.5rem;
-    font-size: 1.2rem;
     cursor: pointer;
+    
 }
 .DeclarationCards:hover {
     background: rgb(104, 104, 104);
     color: white;
     transition: 0.3s ease;
+}
+
+.DeclarationCards > p {
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-align: center;
+}
+
+.SectionMainDeclarationForm {
+    display: flex;
+    justify-content: center
+    ;
 }
 
 .FormDeclarationPopUpButton {
@@ -61,24 +74,28 @@
 }
 
 .PopupOverlay {
-    background: rgb(180, 180, 180);
-    border-radius: 0.25rem;
-    padding: 1rem;
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 50;
+    overflow-y: auto; 
+    padding: 2rem 1rem;
+    border-radius: 1.5rem;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
 .CloseButtonPopUp {
-    margin: 0;
     background: #9ba63d;
     padding: 0.2rem 0.7rem;
     border-radius: 0.5rem;
     border: none;
     color: white;
-    display: flex;
-    align-self: self-end;
-    text-align: center;
     cursor: pointer;
+    display: flex;
+    align-self: flex-end;
 }
 .CloseButtonPopUp:hover {
     background-color: #bccb34;
